# backend-tryon-inference

./: .gitignore  README.md  app.py  pyproject.toml
models/: image_encoder.py  noise_scheduler.py  openpose.py  parsing.py  pipe.py  text_encoder_one.py  text_encoder_two.py  tokenizer_one.py  tokenizer_two.py  unet.py  unet_encoder.py  vae.py
services/: human.py  image.py  inference.py  tensor.py
